--- a/src/test/resources/properties/objectRepo.properties
+++ b/src/test/resources/properties/objectRepo.properties
@@ -1,10 +1,10 @@
 #Login Manager Test
-bmlBtn=button[ng-click='manager()']
+bmlBtn_CSS=button[ng-click='manager()']
 
 
 #Add customer Test
-addcusBtn=button[ng-click="addCust()"]
-firstName=input[placeholder="First Name"]
-lastName=input[placeholder="Last Name"]
-postCode=input[placeholder="Post Code"]
-addBtn=.btn.btn-default
+addcusBtn_CSS=button[ng-click="addCust()"]
+firstName_CSS=input[placeholder="First Name"]
+lastName_CSS=input[placeholder="Last Name"]
+postCode_CSS=input[placeholder="Post Code"]
+addBtn_CSS=.btn.btn-default
