--- a/src/test/resources/properties/objectRepo.properties
+++ b/src/test/resources/properties/objectRepo.properties
@@ -1,6 +1,7 @@
 #Login Manager Test
 bmlBtn_CSS=button[ng-click='manager()']
-
+bankName_CSS=.mainHeading
+actualBankName=XYZ Bank
 
 #Add customer Test
 addcusBtn_CSS=button[ng-click="addCust()"]
