--- a/src/test/resources/properties/objectRepo.properties
+++ b/src/test/resources/properties/objectRepo.properties
@@ -9,3 +9,10 @@ firstName_CSS=input[placeholder="First Name"]
 lastName_CSS=input[placeholder="Last Name"]
 postCode_CSS=input[placeholder="Post Code"]
 addBtn_CSS=.btn.btn-default
+
+
+
+#OpenAccount Test
+customerName_CSS=#userSelect
+currency_CSS=#currency
+processBtn_XPATH=//button[contains(text(),'Process')]
