--- a/src/test/resources/properties/objectRepo.properties
+++ b/src/test/resources/properties/objectRepo.properties
@@ -13,6 +13,7 @@ addBtn_CSS=.btn.btn-default
 
 
 #OpenAccount Test
-customerName_CSS=#userSelect
+openAccount_CSS=button[ng-click="openAccount()"]
+customer_CSS=#userSelect
 currency_CSS=#currency
 processBtn_XPATH=//button[contains(text(),'Process')]
